@@ -1,4 +1,4 @@
-.cvsignore
+.gitignore
 Changes
 lib/Parallel/Forker.pm
 lib/Parallel/Forker/Process.pm
@@ -10,6 +10,7 @@ README
 readme.texi
 t/00_pod.t
 t/01_manifest.t
+t/03_spaces.t
 t/10_forker.t
 t/11_dashes.t
 t/12_rsh.t
