@@ -1,5 +1,6 @@
 ^CVS/
 /CVS/
+^.git/
 pm_to_blib$
 test_store$
 ,v$
