@@ -35,7 +35,7 @@ package.
 ==========================
 
 The latest version is available at `http://www.perl.org/CPAN/', and
-from `http://www.veripool.com/'.
+from `http://www.veripool.org/'.
 
 1.5 Supported Systems
 =====================
