@@ -1,5 +1,5 @@
 # Fork.pm -- Parallel management
-# $Id: Forker.pm 50266 2008-01-29 19:36:35Z wsnyder $
+# $Id: Forker.pm 64733 2008-11-14 19:52:59Z wsnyder $
 ######################################################################
 #
 # This program is Copyright 2002-2008 by Wilson Snyder.
@@ -18,7 +18,6 @@
 package Parallel::Forker;
 require 5.006;
 use Time::HiRes qw (usleep);
-use Proc::ProcessTable;
 use IO::File;
 
 use Parallel::Forker::Process;
@@ -26,7 +25,7 @@ use strict;
 use Carp;
 use vars qw($Debug $VERSION);
 
-$VERSION = '1.222';
+$VERSION = '1.223';
 
 ######################################################################
 #### CONSTRUCTOR
@@ -39,8 +38,8 @@ sub new {
 	_labels => {},		# List of process objects, keyed by label
 	_runable => {},		# Process objects runable now, keyed by id
 	_running => {},		# Process objects running now, keyed *PID*
-	_in_child => 0,		# In a child process, don't allow forking
 	_run_after_eqn => undef,# Equation to eval to determine if ready to launch
+	_parent_pid => $$,	# PID of initial process creating the forker
 	max_proc => undef,	# Number processes to launch, <1=any, +=that number
 	use_sig_child => undef,	# Default to not using SIGCHLD handler
 	@_
@@ -50,6 +49,11 @@ sub new {
 }
 
 #### ACCESSORS
+
+sub in_parent {
+    my $self = shift;
+    return $self->{_parent_pid}==$$;
+}
 
 sub max_proc {
     my $self = shift;
@@ -306,7 +310,7 @@ Parallel::Forker - Parallel job forking and management
    use Parallel::Forker;
    $Fork = new Parallel::Forker (use_sig_child=>1);
    $SIG{CHLD} = sub { Parallel::Forker::sig_child($Fork); };
-   $SIG{TERM} = sub { $Fork->kill_tree_all('TERM') if $Fork; die "Quitting...\n"; };
+   $SIG{TERM} = sub { $Fork->kill_tree_all('TERM') if $Fork && $Fork->in_parent; die "Quitting...\n"; };
 
    $Fork->schedule
       (run_on_start => sub {print "child work here...";},
@@ -365,13 +369,20 @@ Returns one or more Parallel::Forker::Process objects for the given name (one
 object returned) or label (one or more objects returned).  Returns undef if no
 processes are found.
 
+=item $self->in_parent
+
+Return true if and only if called from the parent process (the one that
+created the Forker object).
+
 =item $self->is_any_left
 
 Return true if any processes are running, or runnable (need to run).
 
 =item $self->kill_all (<signal>)
 
-Send a signal to all running children.
+Send a signal to all running children.  You probably want to call this only
+from the parent process that created the Parallel::Forker object, wrap the
+call in "if ($self->in_parent)."
 
 =item $self->kill_tree_all (<signal>)
 
@@ -513,7 +524,7 @@ Print a dump of the execution tree.
 =head1 DISTRIBUTION
 
 The latest version is available from CPAN and from
-L<http://www.veripool.com/>.
+L<http://www.veripool.org/>.
 
 Copyright 2002-2008 by Wilson Snyder.  This package is free software; you
 can redistribute it and/or modify it under the terms of either the GNU
