@@ -1,5 +1,5 @@
 \input texinfo @c -*-texinfo-*-
-@c $Id: readme.texi 50266 2008-01-29 19:36:35Z wsnyder $
+@c $Id: readme.texi 55774 2008-06-12 14:15:21Z wsnyder $
 @c %**start of header
 @setfilename readme.info
 @settitle Perl Parallel::Forker Installation
@@ -15,12 +15,12 @@
 This is the Parallel::Forker Package.
 
 @menu
-* Copyright::                   
-* Summary::                     
-* Description::                 
-* Obtaining Distribution::      
-* Supported Systems::           
-* Installation::                
+* Copyright::
+* Summary::
+* Description::
+* Obtaining Distribution::
+* Supported Systems::
+* Installation::
 @end menu
 
 @node Copyright, Summary, Top, Top
@@ -53,7 +53,7 @@ See the Parallel::Forker manpage for a detailed description of this package.
 @section Obtaining Distribution
 
 The latest version is available at @uref{http://www.perl.org/CPAN/},
-and from @uref{http://www.veripool.com/}.
+and from @uref{http://www.veripool.org/}.
 
 @node Supported Systems, Installation, Obtaining Distribution, Top
 @section Supported Systems
