@@ -1,5 +1,5 @@
 #!/usr/bin/perl -w
-# $Id: 11_dashes.t 50266 2008-01-29 19:36:35Z wsnyder $
+# $Id: 11_dashes.t 64613 2008-11-13 14:55:57Z wsnyder $
 # DESCRIPTION: Perl ExtUtils: Type 'make test' to test this package
 #
 # Copyright 2003-2008 by Wilson Snyder.  This program is free software;
@@ -31,7 +31,7 @@ sub a_test {
 
     my $fork = new Parallel::Forker (use_sig_child=>1);
     $SIG{CHLD} = sub { Parallel::Forker::sig_child($fork); };
-    $SIG{TERM} = sub { $fork->kill_tree_all('TERM') if $fork; die "Quitting...\n"; };
+    $SIG{TERM} = sub { $fork->kill_tree_all('TERM') if $fork && $fork->in_parent; die "Quitting...\n"; };
     ok(1);
 
     # Test use of -'s in run_afters
@@ -122,7 +122,7 @@ sub a_test {
       return join('', map { $_->name }
         grep { $_->$method } $fork->processes_sorted);
     }
-    
+
     if ($failit) {
       ok( names_are($fork, 'is_parerr'), 'bg' );
       ok( names_are($fork, 'is_done'), 'acdee2fh' );
@@ -145,7 +145,7 @@ sub a_test {
 {
   my $fork = new Parallel::Forker (use_sig_child=>1);
   $SIG{CHLD} = sub { Parallel::Forker::sig_child($fork); };
-  $SIG{TERM} = sub { $fork->kill_tree_all('TERM') if $fork; die "Quitting...\n"; };
+  $SIG{TERM} = sub { $fork->kill_tree_all('TERM') if $fork && $fork->in_parent; die "Quitting...\n"; };
 
   my @done_order;
   sub done { push @done_order, $_[0]->name }
