@@ -1,5 +1,5 @@
 #!/usr/bin/perl -w
-# $Id: 13_jobs.t 50266 2008-01-29 19:36:35Z wsnyder $
+# $Id: 13_jobs.t 64613 2008-11-13 14:55:57Z wsnyder $
 # DESCRIPTION: Perl ExtUtils: Type 'make test' to test this package
 #
 # Copyright 2003-2008 by Wilson Snyder.  This program is free software;
@@ -27,7 +27,7 @@ sub a_test {
     $fork->max_proc(3);
 
     $SIG{CHLD} = sub { Parallel::Forker::sig_child($fork); };
-    $SIG{TERM} = sub { ok(0); $fork->kill_tree_all('TERM') if $fork; die "Quitting...\n"; };
+    $SIG{TERM} = sub { ok(0); $fork->kill_tree_all('TERM') if $fork && $fork->in_parent; die "Quitting...\n"; };
     ok(1);
 
     my $Max_Running=0;
