@@ -1,5 +1,5 @@
 #!/usr/bin/perl -w
-# $Id: 20_nochld.t 50266 2008-01-29 19:36:35Z wsnyder $
+# $Id: 20_nochld.t 64613 2008-11-13 14:55:57Z wsnyder $
 # DESCRIPTION: Perl ExtUtils: Type 'make test' to test this package
 #
 # Copyright 2007-2008 by Wilson Snyder.  This program is free software;
@@ -27,7 +27,7 @@ ok(1);
 
 # Not required in old versions, so make sure we still work
 #$SIG{CHLD} = sub { Parallel::Forker::sig_child($fork); };  # Not method, as is less stuff for a handler to do
-$SIG{TERM} = sub { $fork->kill_tree_all('TERM') if $fork; die "Quitting...\n"; };
+$SIG{TERM} = sub { $fork->kill_tree_all('TERM') if $fork && $fork->in_parent; die "Quitting...\n"; };
 ok(1);
 
 my $p1 = $fork->schedule(label=>'p1',
